--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -19,19 +19,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python 3.10
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python-version: "3.13"
+        cache: 'pip'
 
     - name: Sync playlist
       run: |
-       python collection_playlist.py
+        pip install -r requirements.txt
+        python collection_playlist.py
 
     - name: Commit changes
       env:
