--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -25,10 +25,11 @@ jobs:
         python-version: "3.10"
         cache: 'pip'
 
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
     - name: Sync playlist
-      run: |
-        pip install -r requirements.txt
-        python collection_playlist.py
+      run: python collection_playlist.py
 
     - name: Commit changes
       env:
@@ -44,7 +45,7 @@ jobs:
         fi
 
         git add *.m3u
-        git commit -m "chore: auto-update IPTV playlists - $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
+        git commit -m "chore: auto-update IPTV playlists - $(TZ=UTC-8 date '+%Y-%m-%d %H:%M:%S %Z')"
         echo "✅ 文件已提交"
 
         git push origin ${{ github.ref_name }}
