chore: Update workflow TZ

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -12,6 +12,9 @@ on:
 permissions:
   contents: write
 
+env:
+  TZ: Asia/Shanghai
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -45,7 +48,7 @@ jobs:
         fi
 
         git add *.m3u
-        git commit -m "chore: auto-update IPTV playlists - $(TZ=UTC-8 date '+%Y-%m-%d %H:%M:%S %Z')"
+        git commit -m "chore: auto-update IPTV playlists - $(date '+%Y-%m-%d %H:%M:%S %Z')"
         echo "✅ 文件已提交"
 
         git push origin ${{ github.ref_name }}
